Fixed alignment for page

--- a/style.css
+++ b/style.css
@@ -86,7 +86,8 @@ li {
 .image-style {
     max-width: 300px;
     max-height: 600px;
-    float: right;
+    float: left;
+    margin-right: 20px;
 }
 
 .project-box {
